Vitae and publications update.

--- a/cvitae.Rmd
+++ b/cvitae.Rmd
@@ -2,4 +2,4 @@
 title: curriculum vitae
 ---
 
-[View my curriculum vitae.]('http://www.academia.edu/attachments/58588948/download_file')
+[View my curriculum vitae.]('http://nd.academia.edu/KelseyMReese/CurriculumVitae')
