--- a/publications.Rmd
+++ b/publications.Rmd
@@ -7,6 +7,9 @@ Kohler, Timothy A., and **Kelsey M. Reese**
 2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Long and spatially variable Neolithic Demographic Transition in the North American Southwest](http://www.pnas.org/content/111/28/10101.full.pdf?with-ds=yes). *Proceedings of the National Academy of Sciences* 111(28):10101-10106.
 
 ## technical reports
+**Reese, Kelsey M.**  
+2018&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Fieldwork Episode Report 2018: Preliminary Survey of Bureau of Land Management Sites on the Mesa Verde North Escarpment*. Report on file at the Bureau of Land Management Tres Rios Field Office in compliance with Research Permit C-79006, Dolores, Colorado.
+
 Glowacki, Donna M., R. Kyle Bocinsky, **Kelsey M. Reese**, and Katherine A. Portman  
 2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*The Mesa Verde Community Center Survey: Summer 2017*. Report on file at Mesa Verde National Park and Crow Canyon Archaeological Center, Colorado.
   
