--- a/cvitae.Rmd
+++ b/cvitae.Rmd
@@ -2,4 +2,9 @@
 title: curriculum vitae
 ---
 
-[View my curriculum vitae.]('https://drive.google.com/drive/u/1/folders/1QcL4csxskP8e4hk6N4xO4HMeaYdBsR4B')
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-1.jpg)  
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-2.jpg)  
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-3.jpg)  
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-4.jpg)  
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-5.jpg)  
+![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/REESE_curriculumvitæ-6.jpg)  
