--- a/projects.Rmd
+++ b/projects.Rmd
@@ -22,7 +22,7 @@ title: "projects"
 <div class="column-full">
 
 **************************************************************************
-## **Dynamic Communities on the Mesa Verde Cuesta** (*under review*)
+## **Dynamic Communities on the Mesa Verde Cuesta** (*in print*)
 </div>
 
 <div class="column-left">
