--- a/publications.Rmd
+++ b/publications.Rmd
@@ -3,6 +3,9 @@ title: "publications"
 ---
 
 ## peer-reviewed
+**Reese, Kelsey M.**, Donna M. Glowacki, and Timothy A. Kohler   
+n.d.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dynamic Communities on the Mesa Verde Cuesta. *American Antiquity.* In print.
+
 Kohler, Timothy A., and **Kelsey M. Reese**   
 2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Long and spatially variable Neolithic Demographic Transition in the North American Southwest](http://www.pnas.org/content/111/28/10101.full.pdf?with-ds=yes). *Proceedings of the National Academy of Sciences* 111(28):10101-10106.
 
