--- a/index.Rmd
+++ b/index.Rmd
@@ -5,9 +5,9 @@ title: southwest archaeologist \(\cdot\) computational specialist
 ![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/index.jpg)  
 \  
 
-I am  a computational archaeologist specializing in large-scale geospatial analyses. My dissertation work focuses on understanding occupation, community development, and resiliency of populations in ecologically marginal spaces. My research is being done on the Mesa Verde North Escarpment in southwestern Colorado where I am implementing drone orthoimaging and full pedestrian survey coverage to efficiently and effectively record sites inhabited by the ancestral Pueblo people anywhere between A.D. 600 and 1300.
+I am  a computational archaeologist specializing in large-scale geospatial analyses. My dissertation work focuses on understanding occupation, community development, and resiliency of populations in ecologically marginal spaces. My research is being done on the Mesa Verde North Escarpment in southwestern Colorado where I am implementing drone orthoimaging and full pedestrian survey to efficiently and effectively record sites inhabited by the ancestral Pueblo people anywhere between AD 600 and 1300.
 
-I received my M.A. in Anthropology from Washington State University and my B.A. in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a Ph.D. Student at the University of Notre Dame and a University Presidential Fellow in Humanities and Social Sciences.
+I received my MA in Anthropology from Washington State University and my BA in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate at the University of Notre Dame and a University Presidential Fellow in Humanities and Social Sciences.
 
 [Read about the work being done by Dr. Donna M. Glowacki and myself in the U.S. Southwest.](https://magazine.nd.edu/news/reading-the-remains/)
 
