--- a/cvitae.Rmd
+++ b/cvitae.Rmd
@@ -2,4 +2,6 @@
 title: curriculum vitae
 ---
 
-![](https://github.com/kmreese-io/kmreese-io.github.io/raw/master/REESE_curriculumvitæ.pdf)
+<!-- [Curriculum Vitae.](https://kmreese-io.github.io/Documents/Reese_CV-11012019.pdf) -->
+
+<a href="https://kmreese-io.github.io/Documents/Reese_CV-11012019.pdf" target="_blank">Curriculum Vitae.</a>
