--- a/index.Rmd
+++ b/index.Rmd
@@ -2,19 +2,23 @@
 title: southwest archaeologist \(\cdot\) computational specialist
 ---
 
-![](/Users/kmreese/Documents/kmreese.io/kmreese-io.github.io/Pictures/index.jpg)  
+![](/Users/kmreese/Documents/PROFESSIONAL/kmreese-io.github.io/Pictures/index.jpg)  
 \  
 
 I am  a computational archaeologist specializing in large-scale geospatial analyses. My dissertation work focuses on understanding occupation, community development, and resiliency of populations in ecologically marginal spaces. My research is being done on the Mesa Verde North Escarpment in southwestern Colorado where I am implementing drone orthoimaging and full pedestrian survey to efficiently and effectively record sites inhabited by the ancestral Pueblo people anywhere between AD 600 and 1300.
 
 I received my MA in Anthropology from Washington State University and my BA in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate at the University of Notre Dame and a University Presidential Fellow in Humanities and Social Sciences.
 
-[Read about the work being done by Dr. Donna M. Glowacki and myself in the U.S. Southwest.](https://magazine.nd.edu/news/reading-the-remains/)
+[Read an article on my initial impressions of the Mesa Verde North Escarpment.](https://the-journal.com/articles/156383-pueblo-villages-thrived-on-mesa-verde-escarpment)
 
 ### contact
+kreese1@nd.edu
+
 University of Notre Dame   
 Department of Anthropology   
 232 Corbett Family Hall   
-Notre Dame, IN 46556   
+Notre Dame, Indiana 46556   
 
-kreese1@nd.edu
+Santa Fe Institute
+1399 Hyde Park Road
+Santa Fe, New Mexico 87501
