--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,7 +4,7 @@ title: "publications"
 
 ## peer-reviewed
 **Reese, Kelsey M.**, Donna M. Glowacki, and Timothy A. Kohler   
-2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_et_al_2019.pdf" target="_blank">Dynamic Communities on the Mesa Verde Cuesta.</a>. *American Antiquity* 84(4): 728--747.
+2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_et_al_2019.pdf" target="_blank">Dynamic Communities on the Mesa Verde Cuesta.</a> *American Antiquity* 84(4): 728--747.
 
 Kohler, Timothy A., and **Kelsey M. Reese**   
 2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Kohler_and_Reese_2014.pdf" target="_blank">Long and spatially variable Neolithic Demographic Transition in the North American Southwest.</a> *Proceedings of the National Academy of Sciences* 111(28): 10101--10106.
@@ -20,8 +20,8 @@ Glowacki, Donna M., R. Kyle Bocinsky, **Kelsey M. Reese**, and Katherine A. Port
 2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*The Mesa Verde Community Center Survey: Summer 2017*. Report on file at Mesa Verde National Park and Crow Canyon Archaeological Center, Colorado.
   
 Glowacki, Donna M., with contributions by Elise Alonzi, R. Kyle Bocinsky, and **Kelsey M. Reese**   
-2012&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://village.anth.wsu.edu/sites/village.anth.wsu.edu/files/publications/FINAL_REPORT_VEP_2012_noUTMs.pdf" target="_blank">*The Mesa Verde Community Center Survey: Final Report.*</a>. Manuscript submitted to the National Science Foundation and Mesa Verde National Park, on file with Crow Canyon Archaeological Center and Washington State University in compliance with deliverable for NSF Grant DEB-0816400.
+2012&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://village.anth.wsu.edu/sites/village.anth.wsu.edu/files/publications/FINAL_REPORT_VEP_2012_noUTMs.pdf" target="_blank">The Mesa Verde Community Center Survey: Final Report.</a> Manuscript submitted to the National Science Foundation and Mesa Verde National Park, on file with Crow Canyon Archaeological Center and Washington State University in compliance with deliverable for NSF Grant DEB-0816400.
 
 ## unpublished thesis
 **Reese, Kelsey M.**   
-2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.dissertations.wsu.edu/Thesis/Spring2014/k_reese_042914.pdf" target="_blank">Over the Line: A Least-cost Analysis of "Community" in Mesa Verde National Park.</a> Unpublished Master's thesis, Washington State University, Pullman.
+2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.dissertations.wsu.edu/Thesis/Spring2014/k_reese_042914.pdf" target="_blank">Over the Line: A Least-cost Analysis of 'Community' in Mesa Verde National Park.</a> Unpublished Master's thesis, Washington State University, Pullman.
