--- a/projects.Rmd
+++ b/projects.Rmd
@@ -22,7 +22,7 @@ title: "projects"
 <div class="column-full">
 
 **************************************************************************
-## **Dynamic Communities on the Mesa Verde Cuesta**
+## **Dynamic Communities on the Mesa Verde Cuesta** *American Antiquity*
 </div>
 
 <div class="column-left">
