--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ I am  a computational archaeologist specializing in large-scale geospatial analy
 
 I received my MA in Anthropology from Washington State University and my BA in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate at the University of Notre Dame and a University Presidential Fellow in Humanities and Social Sciences.
 
-[Read an article on my initial impressions of the Mesa Verde North Escarpment.](https://the-journal.com/articles/156383-pueblo-villages-thrived-on-mesa-verde-escarpment)
+[Read an article about a recent presentation on the Mesa Verde North Escarpment.](https://the-journal.com/articles/156383-pueblo-villages-thrived-on-mesa-verde-escarpment)
 
 ### contact
 kreese1@nd.edu
