--- a/projects.Rmd
+++ b/projects.Rmd
@@ -22,7 +22,8 @@ title: "projects"
 <div class="column-full">
 
 **************************************************************************
-## **Dynamic Communities on the Mesa Verde Cuesta** *American Antiquity*
+## **Dynamic Communities on the Mesa Verde Cuesta**  
+*American Antiquity*
 </div>
 
 <div class="column-left">
@@ -35,23 +36,6 @@ title: "projects"
 
 <div class="column-right">
 This paper systematically and quantitatively characterizes interaction dynamics and community formation based on changes in spatial patterns of contemporaneous households. We develop and apply a geo-spatial routine to measure changing extents of household interaction and community formation from A.D. 600–1280 on the Mesa Verde cuesta in southwestern Colorado. Results suggest that household spatial organization was shaped simultaneously by the maintenance of regular social interaction that sustained communities, and the need for physical space among households. Between A.D. 600 and 1200, households balanced these factors by forming an increased number of dispersed communities in response to increases in population and variable environmental stressors. However, as population rebounded after the mid-1100s megadrought, communities became increasingly compact, disrupting a long-standing equilibrium between household interaction and subsistence space within each community. The vulnerabilities this change in community spatial organization created were compounded by a cooler climate, drought, violence, and changes in political and ritual organization in the mid-A.D. 1200s, which ultimately culminated in the complete depopulation of the Mesa Verde cuesta by the end of the thirteenth century.
-</div>
-
-<div class="column-full">
-**************************************************************************
-## **All for Drone and Drone for Free: A Free and/or Open-Source Workflow for UAV Imagery Collection and Analysis**
-</div>
-
-<div class="column-left">
-![](/Users/kmreese/Documents/PROFESSIONAL/kmreese-io.github.io/Pictures/SAA-REESE_2019.jpeg)
-\linebreak
-\linebreak
-  
-**Code for** [**All for Drone and Drone for Free: A Free and/or Open-Source Workflow for UAV Imagery Collection and Analysis**](https://github.com/kmreese-io/SAA-Reese_2019)
-</div>
-
-<div class="column-right">
-Full-coverage pedestrian survey to record new sites on unknown archaeological landscapes is costly in terms of money, time, and personnel. Archaeological projects are usually limited in these resources and have to simultaneously balance data quantity with quality within their budgetary means. Researchers have experimented with Unmanned Aerial Vehivles (UAV) and remote sensing technology over the past decade, but the initial cost of equipment, software, and necessary processing power has hindered the ubiquitous implementation of UAV technology for archaeological survey. This poster presents a systematic analysis of UAV orthoimagery in a variety of landcover contexts to determine the most effective means of identifying archaeological sites in a previously unsurveyed area. By implementing the methods presented here, researchers will be able to identify and target areas of interest to visit while in the field through a free and automated process using R, DroneDeploy, and OpenDroneMap. The development of an effective and free methodology for collecting and analyzing aerial orthoimagery increases the accessibility of cutting-edge technology to researchers without the funds to purchase proprietary software. A case study from the Mesa Verde North Escarpment in southwestern Colorado is used to demonstrate the process and results of the proposed free and open-source workflow.
 </div>
 
 <div class="column-full">
