--- a/projects.Rmd
+++ b/projects.Rmd
@@ -23,7 +23,7 @@ title: "projects"
 <div class="column-full">
 **************************************************************************
 ## **Check Dam Agriculture on the Mesa Verde Cuesta**  
-### *Journal of Archaeological Science: Reports (in print)*  
+### *Journal of Archaeological Science: Reports*  
 </div>
 
 <div class="column-left">
