--- a/publications.Rmd
+++ b/publications.Rmd
@@ -3,6 +3,9 @@ title: "publications"
 ---
 
 ## peer-reviewed
+**Reese, Kelsey M.**   
+2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_2020.pdf" target="_blank">Check dam agriculture on the Mesa Verde Cuesta.</a> *Journal of Archaeological Science: Reports* 31(102372): 1--10.
+
 **Reese, Kelsey M.**, Donna M. Glowacki, and Timothy A. Kohler   
 2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_et_al_2019.pdf" target="_blank">Dynamic Communities on the Mesa Verde Cuesta.</a> *American Antiquity* 84(4): 728--747.
 
