--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ title: southwest archaeologist \(\cdot\) computational specialist
 
 I am  a computational archaeologist specializing in large-scale geospatial analyses. My dissertation work focuses on understanding occupation, community development, and resiliency of populations in ecologically marginal spaces. My research is being done on the Mesa Verde North Escarpment in southwestern Colorado where I am implementing drone orthoimaging and full pedestrian survey to efficiently and effectively record sites inhabited by the ancestral Pueblo people anywhere between AD 450 and 1300.
 
-I received my MA in Anthropology from Washington State University and my BA in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate at the University of Notre Dame and a University Presidential Fellow in Humanities and Social Sciences.
+I received my M.A. in Anthropology from Washington State University and my B.A. in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate, graduating in August 2021, at the University of Notre Dame, a University Presidential Fellow in Humanities and Social Sciences, and a Research Associate at the Santa Fe Institute.
 
 [Read an article from the Cortez Journal about a public presentation on the Mesa Verde North Escarpment.](https://the-journal.com/articles/156383-pueblo-villages-thrived-on-mesa-verde-escarpment)
 
