--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,7 +4,7 @@ title: "publications"
 
 ## peer-reviewed
 **Reese, Kelsey M.**   
-2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Deep learning artificial neural networks for non-destructive archaeological site dating *Journal of Archaeological Science* In print.
+2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_2021.pdf" target="_blank">Deep learning artificial neural networks for non-destructive archaeological site dating.</a> *Journal of Archaeological Science* 132(105413): 1--14.
 
 **Reese, Kelsey M.**   
 2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_2020.pdf" target="_blank">Check dam agriculture on the Mesa Verde Cuesta.</a> *Journal of Archaeological Science: Reports* 31(102372): 1--10.
