--- a/index.Rmd
+++ b/index.Rmd
@@ -14,11 +14,13 @@ I received my M.A. in Anthropology from Washington State University and my B.A. 
 ### contact
 kreese1@nd.edu
 
+Postdoctoral Fellow  
 University of Notre Dame   
 Department of Anthropology   
-232 Corbett Family Hall   
+296 Corbett Family Hall   
 Notre Dame, Indiana 46556   
 
+Research Associate  
 Santa Fe Institute  
 1399 Hyde Park Road  
 Santa Fe, New Mexico 87501  
