--- a/projects.Rmd
+++ b/projects.Rmd
@@ -20,23 +20,23 @@ title: "projects"
 }
 </style>
 
-<div class="column-full">
-**************************************************************************
-## **A Theoretical Framework for Free and Open-source UAV-based Archaeological Research**
-### *Submitted for review*
-</div>
+<!-- <div class="column-full"> -->
+<!-- ************************************************************************** -->
+<!-- ## **A Theoretical Framework for Free and Open-source UAV-based Archaeological Research** -->
+<!-- ### *Submitted for review* -->
+<!-- </div> -->
 
-<div class="column-left">
-![](/Users/kmreese/Documents/PROFESSIONAL/kmreese-io.github.io/Pictures/Reese_2021-AAP.jpg)
-\linebreak
-\linebreak
+<!-- <div class="column-left"> -->
+<!-- ![](/Users/kmreese/Documents/PROFESSIONAL/kmreese-io.github.io/Pictures/Reese_2021-AAP.jpg) -->
+<!-- \linebreak -->
+<!-- \linebreak -->
 
-**Code for** [**the Free and Open-source Software (FOSS) Protocol**](https://github.com/kmreese-io/Reese_and_Field_2021-PLOS/blob/master/Reese_and_Field_2021-foss-protocol.txt)
-</div>
+<!-- **Code for** [**the Free and Open-source Software (FOSS) Protocol**](https://github.com/kmreese-io/Reese_and_Field_2021-PLOS/blob/master/Reese_and_Field_2021-foss-protocol.txt) -->
+<!-- </div> -->
 
-<div class="column-right">
-Decreasing costs of consumer-level Unmanned Aerial Vehicles (UAVs) have increased accessibility to UAV-collected landscape data in archaeological contexts. Publications discussing the use of UAVs in archaeology, however, have mainly focused on the details of data collection while rarely discussing the potential applications of the collected information once it is processed. This focus on data collection has stunted the development of heuristic or theory-driven approaches to utilizing UAV-collected landscape data in pursuit of anthropologically-based research questions. This paper presents a theoretical framework for understanding how UAVs can inform and change our perspectives of cultural landscapes, and presents a case study applying the free and open-source protocol presented by Reese and Field (this issue) to illustrate one potential way to implement this technology to inform a heuristic model of constructed places in cultural landscapes.
-</div>
+<!-- <div class="column-right"> -->
+<!-- Decreasing costs of consumer-level Unmanned Aerial Vehicles (UAVs) have increased accessibility to UAV-collected landscape data in archaeological contexts. Publications discussing the use of UAVs in archaeology, however, have mainly focused on the details of data collection while rarely discussing the potential applications of the collected information once it is processed. This focus on data collection has stunted the development of heuristic or theory-driven approaches to utilizing UAV-collected landscape data in pursuit of anthropologically-based research questions. This paper presents a theoretical framework for understanding how UAVs can inform and change our perspectives of cultural landscapes, and presents a case study applying the free and open-source protocol presented by Reese and Field (this issue) to illustrate one potential way to implement this technology to inform a heuristic model of constructed places in cultural landscapes. -->
+<!-- </div> -->
 
 <div class="column-full">
 **************************************************************************
@@ -59,7 +59,7 @@ Full-coverage pedestrian survey to record cultural features on unexplored archae
 <div class="column-full">
 **************************************************************************
 ## **Deep Learning Artificial Neural Networks for Non-destructive Archaeological Site Dating**
-### *Journal of Archaeological Science, in print*  
+### *Journal of Archaeological Science*  
 </div>
 
 <div class="column-left">
@@ -73,7 +73,7 @@ Full-coverage pedestrian survey to record cultural features on unexplored archae
 </div>
 
 <div class="column-right">
-This article introduces artificial neural networks as a computational tool to utilize legacy archaeological data for precisely and accurately estimating dates of residential site occupation. The implementation of this deep learning algorithm can provide high-resolution demographic reconstructions of a study area from non-collection, non-invasive, and non-destructive data collection methods that only record frequencies of artifact types on the contemporary ground surface. The utility of this deep learning algorithm is presented through an example from the central Mesa Verde region in the northern US Southwest. Results show a properly trained artificial neural network predicts annual residential occupation with an average 92.8% accuracy from AD 450–1300. An annual demographic reconstruction of the central Mesa Verde region using occupation predictions from the artificial neural network is also presented.
+This article introduces artificial neural networks as a computational tool to utilize legacy archaeological data for precisely and accurately estimating dates of residential site occupation. The implementation of this deep learning algorithm can provide high-resolution demographic reconstructions of a study area from non-collection, non-invasive, and non-destructive data collection methods that only record frequencies of artifact types on the contemporary ground surface. The utility of this deep learning algorithm is presented through an example from the central Mesa Verde region in the northern US Southwest. Results show a properly trained artificial neural network predicts annual residential occupation with an average 92.8% accuracy from AD 450--1300. An annual demographic reconstruction of the central Mesa Verde region using occupation predictions from the artificial neural network is also presented.
 </div>
 
 <div class="column-full">
