--- a/publications.Rmd
+++ b/publications.Rmd
@@ -4,7 +4,7 @@ title: "publications"
 
 ## peer-reviewed
 **Reese, Kelsey M.**   
-2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Deep learning artificial neural networks for non-destructive archaeological site dating *Journal of Archaeological Science* In print.
+2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_2021.pdf" target="_blank">Deep learning artificial neural networks for non-destructive archaeological site dating.</a> *Journal of Archaeological Science* 132(105413): 1--14.
 
 **Reese, Kelsey M.**   
 2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Reese_2020.pdf" target="_blank">Check dam agriculture on the Mesa Verde Cuesta.</a> *Journal of Archaeological Science: Reports* 31(102372): 1--10.
@@ -16,6 +16,9 @@ Kohler, Timothy A., and **Kelsey M. Reese**
 2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://kmreese-io.github.io/Documents/Kohler_and_Reese_2014.pdf" target="_blank">Long and spatially variable Neolithic Demographic Transition in the North American Southwest.</a> *Proceedings of the National Academy of Sciences* 111(28): 10101--10106.
 
 ## technical reports
+**Reese, Kelsey M.**  
+2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Mesa Verde North Escarpment Survey: Class III Survey of State-managed Land on the Mesa Verde North Escarpment, Montezuma County, Colorado*. Report on file with History Colorado in compliance with Research Permit #76476, Denver, Colorado.
+
 **Reese, Kelsey M.**  
 2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Fieldwork Episode Report 2019: Survey of Bureau of Land Management Sites on the Mesa Verde North Escarpment*. Report on file at the Bureau of Land Management Tres Rios Field Office in compliance with Research Permit C-79006, Dolores, Colorado.
 
@@ -29,5 +32,8 @@ Glowacki, Donna M., with contributions by Elise Alonzi, R. Kyle Bocinsky, and **
 2012&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://village.anth.wsu.edu/sites/village.anth.wsu.edu/files/publications/FINAL_REPORT_VEP_2012_noUTMs.pdf" target="_blank">The Mesa Verde Community Center Survey: Final Report.</a> Manuscript submitted to the National Science Foundation and Mesa Verde National Park, on file with Crow Canyon Archaeological Center and Washington State University in compliance with deliverable for NSF Grant DEB-0816400.
 
 ## unpublished thesis
+**Reese, Kelsey M.**   
+2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resilient Commmunities of the Mesa Verde North Escarpment, AD 890--1300. Unpublished PhD thesis, University of Notre Dame, Notre Dame.
+
 **Reese, Kelsey M.**   
 2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.dissertations.wsu.edu/Thesis/Spring2014/k_reese_042914.pdf" target="_blank">Over the Line: A Least-cost Analysis of 'Community' in Mesa Verde National Park.</a> Unpublished Master's thesis, Washington State University, Pullman.
