--- a/index.Rmd
+++ b/index.Rmd
@@ -5,9 +5,9 @@ title: southwest archaeologist \(\cdot\) computational specialist
 ![](/Users/kmreese/Documents/PROFESSIONAL/kmreese-io.github.io/Pictures/index.jpg)  
 \  
 
-I am  a computational archaeologist specializing in large-scale geospatial analyses. My dissertation work focuses on understanding occupation, community development, and resiliency of populations in ecologically marginal spaces. My research is being done on the Mesa Verde North Escarpment in southwestern Colorado where I am implementing drone orthoimaging and full pedestrian survey to efficiently and effectively record sites inhabited by the ancestral Pueblo people anywhere between AD 450 and 1300.
+I am a computational social scientist specializing in large-scale geospatial analyses utilizing archaeological datasets. My research explores the complexities of community development, occupation, and resiliency of subsistence-farmers during periods of sustained climate change in ecologically marginal spaces. I specialize in Ancestral Pueblo archaeology of the northern U.S. Southwest from AD 450--1300, and my experience includes extensive fieldwork in the Four Corners region, and several years of directing pedestrian survey on the Mesa Verde North Escarpment in southwestern Colorado.
 
-I received my M.A. in Anthropology from Washington State University and my B.A. in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a PhD Candidate, graduating in August 2021, at the University of Notre Dame, a University Presidential Fellow in Humanities and Social Sciences, and a Research Associate at the Santa Fe Institute.
+I hold a PhD in Anthropology from the University of Notre Dame, an MA in Anthropology from Washington State University, and a BA in Political Science and Anthropology from the University of Illinois at Urbana-Champaign. I am currently a Postdoctoral Fellow at the University of Notre Dame, and a Research Associate at the Santa Fe Institute.
 
 [Read an article from the Cortez Journal about a public presentation on the Mesa Verde North Escarpment.](https://the-journal.com/articles/156383-pueblo-villages-thrived-on-mesa-verde-escarpment)
 
